User model created. A little closer with authentication.

--- a/app/views/static_pages/signin.html.erb
+++ b/app/views/static_pages/signin.html.erb
@@ -54,7 +54,7 @@
           </div>
               <div class="nav-collapse pull-right">
                 <ul class="nav">
-                  <li><a href="signin.html">Already a member? &nbsp;Sign In</a></li>
+                  <li><%= link_to "Sign in with Facebook", "/auth/facebook" %></li>
                 </ul>
           </div><!--/.nav-collapse -->
         </div>
