--- a/app/views/edituser.html
+++ b/app/views/edituser.html
@@ -1,160 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Feats With Friends | Create and compete over records set all over the world.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="single_signup.html"><img alt="Feats of" src="assets/img/featsof.png" style="height:38px"></a>
+      <div class="nav-collapse">
+        <ul class="nav">
+        <form class="navbar-search pull-left">
+        <input type="text" class="search-query input-xlarge" placeholder="Search for places, feats and users">
+        </form>
+        </ul>
+      </div>
+      
+      <div class="nav-collapse pull-right">
+        <ul class="nav">
+          <li><a href="featmap.html">Search Feats</a></li>
+          <li><a href="newfeat.html">Create a Feat</a></li>
+          <li><a href="user.html">My Feats</a></li>
+          <li><a href="user.html">My Profile</a></li>
+        </ul>
+      </div>
 
-    <!-- Le styles -->
-    <link href="assets/css/bootstrapuser.css" rel="stylesheet">
-    <link href="assets/css/custom.css" rel="stylesheet">
-    <style type="text/css">
-       
-    body {
-		padding-top: 100px;
-        padding-bottom: 0px;
-    }
-	
-    </style>
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-  </head>
-
-
-  <body>
-
+    </div><!--/.nav-collapse -->
+  </div>
+</div>
+    
   
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="single_signup.html"><img alt="Feats of" src="assets/img/featsof.png" style="height:38px"></a>
-          <div class="nav-collapse">
-            <ul class="nav">
-            <form class="navbar-search pull-left">
-            <input type="text" class="search-query input-xlarge" placeholder="Search for feats, places and users">
-            </form>
-            </ul>
-          </div>
-          
-          <div class="nav-collapse pull-right">
-            <ul class="nav">
-              <li><a href="featmap.html">Search Feats</a></li>
-              <li><a href="user.html">Create a new feat</a></li>
-              <li><a href="user.html">My feats</a></li>
-              <li><a href="user.html">My profile</a></li>
-            </ul>
-          </div>
-
-        </div><!--/.nav-collapse -->
+<div class="container">
+  <div class="row">
+    <div class="span3">
+      <div class="scott-unit">
+        <h1>goCraiggers</h1>
+        <a href="user.html">Go to profile page</a>
+        <br>
       </div>
     </div>
-    
-  
-    <div class="container">
-      <div class="row">
-        <div class="span3">
-          <div class="scott-unit">
-            <h1>goCraiggers</h1>
-            <a href="user.html">Go to profile page</a>
-            <br>
-          </div>
-        </div>
-      </div>
-      <br>
+  </div>
+  <br>
           
-      <div class="row">
-        <div class="span12">
-          <div class="scott-unit">
-            <h1>Edit your profile</h1>
-            <br>
-            <form class="form">
-            <fieldset>
+  <div class="row">
+    <div class="span12">
+      <div class="scott-unit">
+        <h1>Edit your profile</h1>
+        <br>
+        <form class="form">
+        <fieldset>
 
-              <div class="control-group">
-                <label class="control-label" for="input01">Name</label>
-                <div class="controls">
-                <input type="text" class="input-large" id="input01" placeholder="">
-                </div>
-              </div> 
+          <div class="control-group">
+            <label class="control-label" for="input01">Name</label>
+            <div class="controls">
+            <input type="text" class="input-large" id="input01" placeholder="">
+            </div>
+          </div> 
 
-              <div class="control-group">
-                <label class="control-label" for="input01">Location</label>
-                <div class="controls">
-                  <input type="text" class="input-large" id="input01" placeholder="">
-                </div>
-              </div>
-              
-              <div class="control-group">
-                <label class="control-label" for="input01">Who are you?</label>
-                <div class="controls">
-                  <textarea class="input-xxlarge" id="textarea" rows="3" placeholder=""></textarea>
-                </div>
-              </div>
-              <br>
-              
-                            
-              <div class="control-group">
-                <label class="control-label" for="fileInput">Upload a profile picture</label>
-                <div class="controls">
-                 <input class="input-file" id="fileInput" type="file">
-                </div>
-              </div>
-              <br>   
-
-              <button type="submit" class="btn btn-info btn-large">Save changes</button>
-              </fieldset>
-            </form>
+          <div class="control-group">
+            <label class="control-label" for="input01">Location</label>
+            <div class="controls">
+              <input type="text" class="input-large" id="input01" placeholder="">
+            </div>
           </div>
-        </div>
+          
+          <div class="control-group">
+            <label class="control-label" for="input01">Who are you?</label>
+            <div class="controls">
+              <textarea class="input-xxlarge" id="textarea" rows="3" placeholder=""></textarea>
+            </div>
+          </div>
+          <br>
+          
+                        
+          <div class="control-group">
+            <label class="control-label" for="fileInput">Upload a profile picture</label>
+            <div class="controls">
+             <input class="input-file" id="fileInput" type="file">
+            </div>
+          </div>
+          <br>   
+
+          <button type="submit" class="btn btn-info btn-large">Save changes</button>
+          </fieldset>
+        </form>
       </div>
-          <br>
-          <br>
+    </div>
+  </div>
+</div>
+<br>
+<br>
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      
-
-       
-
-   <footer>
-  
-      
-   </footer>
-  
-    
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.js"></script>
-  <script src="assets/js/bootstrap-transition.js"></script>
-  <script src="assets/js/bootstrap-alert.js"></script>
-  <script src="assets/js/bootstrap-modal.js"></script>
-  <script src="assets/js/bootstrap-dropdown.js"></script>
-  <script src="assets/js/bootstrap-scrollspy.js"></script>
-  <script src="assets/js/bootstrap-tab.js"></script>
-  <script src="assets/js/bootstrap-tooltip.js"></script>
-  <script src="assets/js/bootstrap-popover.js"></script>
-  <script src="assets/js/bootstrap-button.js"></script>
-  <script src="assets/js/bootstrap-collapse.js"></script>
-  <script src="assets/js/bootstrap-carousel.js"></script>
-  <script src="assets/js/bootstrap-typeahead.js"></script>
-
-  </body>
- 
-</html>
