--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html lang "en">
-<head>
-  <title>Feats With Friends | Create and compete over records set all over the world.</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+	<head>
+	  <title>Feats With Friends | Create and compete over records set all over the world.</title>
+	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta name="description" content="">
+	  <meta name="author" content="">
 
-  <!-- Le styles -->
-  <link href="assets/css/bootstrapuser.css" rel="stylesheet">
-  <link href="assets/css/custom.css" rel="stylesheet">
-  <style type="text/css">
-     
-  body {
-		padding-top: 100px;
-      padding-bottom: 0px;
-  }
-	
-  </style>
-  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+	  <!-- Le styles -->
+	  <link href="assets/css/bootstrapuser.css" rel="stylesheet">
+	  <link href="assets/css/custom.css" rel="stylesheet">
+	  <style type="text/css">
+   
+	  body {
+			padding-top: 100px;
+	      padding-bottom: 0px;
+	  }
 
-  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+	  </style>
+	  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
-  <!-- Le fav and touch icons -->
-  <link rel="shortcut icon" href="assets/ico/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+	  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+	  <!--[if lt IE 9]>
+	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	  <![endif]-->
 
-</head>
-<body>
+	  <!-- Le fav and touch icons -->
+	  <link rel="shortcut icon" href="assets/ico/favicon.ico">
+	  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+	  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+	  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
-<%= yield %>
+	</head>
+	<body>
+		<%= render 'layouts/navbar' %>
+		<div class="container">
+		  <% flash.each do |key, value| %>
+		    <div class="alert alert-<%= key %>"><%= value %></div>
+		  <% end %>
+		  <%= yield %>
 
-<!-- Main hero unit for a primary marketing message or call to action -->
-    
+		  <!-- Main hero unit for a primary marketing message or call to action -->    
 
-     
+		  <footer>   
+		  </footer>
 
- <footer>
-
-    
- </footer>
+		  <%= debug(params) if Rails.env.development? %>
+		</div>
 
   
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="assets/js/jquery.js"></script>
-<script src="assets/js/bootstrap-transition.js"></script>
-<script src="assets/js/bootstrap-alert.js"></script>
-<script src="assets/js/bootstrap-modal.js"></script>
-<script src="assets/js/bootstrap-dropdown.js"></script>
-<script src="assets/js/bootstrap-scrollspy.js"></script>
-<script src="assets/js/bootstrap-tab.js"></script>
-<script src="assets/js/bootstrap-tooltip.js"></script>
-<script src="assets/js/bootstrap-popover.js"></script>
-<script src="assets/js/bootstrap-button.js"></script>
-<script src="assets/js/bootstrap-collapse.js"></script>
-<script src="assets/js/bootstrap-carousel.js"></script>
-<script src="assets/js/bootstrap-typeahead.js"></script>
+		<!-- Le javascript
+		================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="assets/js/jquery.js"></script>
+		<script src="assets/js/bootstrap-transition.js"></script>
+		<script src="assets/js/bootstrap-alert.js"></script>
+		<script src="assets/js/bootstrap-modal.js"></script>
+		<script src="assets/js/bootstrap-dropdown.js"></script>
+		<script src="assets/js/bootstrap-scrollspy.js"></script>
+		<script src="assets/js/bootstrap-tab.js"></script>
+		<script src="assets/js/bootstrap-tooltip.js"></script>
+		<script src="assets/js/bootstrap-popover.js"></script>
+		<script src="assets/js/bootstrap-button.js"></script>
+		<script src="assets/js/bootstrap-collapse.js"></script>
+		<script src="assets/js/bootstrap-carousel.js"></script>
+		<script src="assets/js/bootstrap-typeahead.js"></script>
 
-</body>
+	</body>
 </html>
 
