--- a/app/views/static_pages/user.html
+++ b/app/views/static_pages/user.html
@@ -22,7 +22,7 @@
 </div>
 
 
-<div class="container">
+<div class="container" id="org_div1">
   <div class="row">
     <div class="span12">
       <div class="scott-unit">
