Forgot to branch

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse"
+      <div class="btn btn-navbar" data-toggle="collapse"
         data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </a>
+      </div>
       <a class="brand" href="single_signup.html"><img alt="Feats of"
 	      src="assets/img/featsof.png" style="height:38px"></a>
       <div class="nav-collapse">
