--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,6 @@
   <div class="row">
     <ul class="span3">
       <div class="well">
-      <h3>New to feats of?</h3>
 	  <h3>Sign up and start competing!</h3>
       <br>
       <%= form_for(@user) do |f| %>
@@ -24,8 +23,7 @@
         <%= f.label :email %>
         <%= f.text_field :email %>
         <br>
-        <br>
-        <%= f.submit "Sign Up with Facebook", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Sign Up", class: "btn btn-large btn-primary" %>
       <% end %>
       </div>
     </ul>
