--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
       </div>
       <a class="brand" href="single_signup.html"><img alt="Feats of"
 	      src="assets/img/featsof.png" style="height:38px"></a>
-      <div class="nav-collapse">
+      <div class="nav-collapse pull-left">
         <ul class="nav">
           <li><a href="howitworks.html">How It Works</a></li>
           <li><a href="signin.html">Terms of Service</a></li>
@@ -23,7 +23,7 @@
 		            Feats <b class="caret"></b>
 		          </a>
 		          <ul class="dropdown-menu">
-			          <%= link_to "Create Feat", "#" %>
+			          <%= link_to "Create Feat", "/feats/new" %>
 			        </ul>
 		        </li>
 		        <li id="user-menu" class="dropdown">
