--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
       <h1>Edit your profile</h1>
       <br>
       <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages' %>
+        <%= render 'shared/error_messages', target: @user %>
         <fieldset>
 
           <div class="control-group">
