--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 	  <title>Feats With Friends | Create and compete over records set all over the world.</title>
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
 	  <%= javascript_include_tag "application" %>
+		<%= content_for :page_specific_js %>
 	  <%= csrf_meta_tags %>
 
 	  <meta charset="utf-8">
@@ -12,9 +13,6 @@
 	  <meta name="author" content="">
 
 	  <!-- Le styles -->
-	  <link href="assets/stylesheets/bootstrapuser.css" rel="stylesheet">
-	  <link href="assets/stylesheets/bootstrap-responsive.css" rel="stylesheet">
-	  <link href="assets/stylesheets/custom.css" rel="stylesheet">
 	  <style type="text/css">
 		 html { height: 100% }
 		 body {
@@ -25,7 +23,6 @@
 		  }
 			#map_canvas { height: 500px }
 	  </style>
-	  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
 	  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	  <!--[if lt IE 9]>
@@ -39,7 +36,7 @@
 	  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
 	</head>
-	<body onload="initialize()">
+	<body>
 		<div class="container">
 			<%= render 'layouts/navbar' %>
 			  <% flash.each do |key, value| %>
