--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -7,30 +7,55 @@
 	
 	$(function () {
 		var lat_lng_bounds = new google.maps.LatLngBounds();
-		var ne_lat_lng;
-		var lat_lng = new google.maps.LatLng(<%=@attempts.first.feat.location.latitude%>,
-			 							<%=@attempts.first.feat.location.longitude%>);
+		var zoom = 15;
+		var title = "";
+		
+		<% if @attempts.empty? %>
+			<% if request.location.latitude == 0 && 
+				    request.location.longitude == 0 %>
+				var lat_lng = new google.maps.LatLng(37.09024, -95.712891);
+				zoom    = 4;
+			<% else %>	
+				var lat_lng = new google.maps.LatLng(<%=request.location.latitude%>,
+												<%=request.location.longitude%>);
+			<% end %>
+		<% else %>
+			var lat_lng = 
+						new google.maps.LatLng(<%=@attempts.first.feat.location.latitude%>,
+			 						<%=@attempts.first.feat.location.longitude%>);
+		<% end %>
+		
 	  var mapOptions = {
 	    center: lat_lng,
-	    zoom: 15,
+	    zoom: zoom,
 	    mapTypeId: google.maps.MapTypeId.ROADMAP
 	  };
+	
 	  gMap = new google.maps.Map(document.getElementById("map_canvas"),
 	          mapOptions);
-		<% @attempts.each do |a| %>
-			lat_lng = new google.maps.LatLng(<%=a.feat.location.latitude%>,
-				 							<%=a.feat.location.longitude%>);
+	
+		<% if @attempts.any? %>
+			<% @attempts.each do |a| %>
+				lat_lng = new google.maps.LatLng(<%=a.feat.location.latitude%>,
+					 							<%=a.feat.location.longitude%>);
+				var marker = new google.maps.Marker({
+					position: lat_lng,
+					title: "<%=a.feat.name%>",
+				});
+
+				marker.setMap(gMap);
+	 			gMarkers.push(marker);
+				lat_lng_bounds.extend(lat_lng);
+			<% end %>
+			gMap.fitBounds(lat_lng_bounds);		
+		<% else %>
 			var marker = new google.maps.Marker({
 				position: lat_lng,
-				title: "<%=a.feat.name%>",
+				title: title
 			});
 
 			marker.setMap(gMap);
- 			gMarkers.push(marker);
-			lat_lng_bounds.extend(lat_lng);
-		<% end %>
-		
-		gMap.fitBounds(lat_lng_bounds);		
+		<% end %>					
 	});
 	
 	function selection_changed( select_obj ) {
