--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -3,12 +3,17 @@
   <div class="row">
     <div class="span5">
       <div class="scott-unit">
-				<%= render 'feat_info' %>
-				<br>
-	      <br>
 				<div class="row">
-					<div class="span4">
-						<%= render 'form' %>
+					<%= render 'layouts/feat_info' %>
+					<br>
+	      	<br>
+				</div>
+				<div class="row">
+					<div class="span1">
+						<br>
+					</div>
+					<div class="span3">
+						<%= render 'attempt_form' %>
 					</div>
 				</div>				
 			</div>
