--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -3,12 +3,12 @@
   <div class="row">
     <div class="span5">
       <div class="scott-unit">
-				<%= render 'feat_info' %>
+				<%= render 'layouts/feat_info' %>
 				<br>
 	      <br>
 				<div class="row">
 					<div class="span4">
-						<%= render 'form' %>
+						<%= render 'attempt_form' %>
 					</div>
 				</div>				
 			</div>
