--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="span5">
       <div class="scott-unit">
-				<%= render 'feat_info' %>
+				<%= render 'layouts/feat_info' %>
 				<br>
 	      <br>
 				<div class="row">
