--- a/app/views/feats/index.html.erb
+++ b/app/views/feats/index.html.erb
@@ -46,7 +46,9 @@
 	 			gMarkers.push(marker);
 				lat_lng_bounds.extend(lat_lng);
 			<% end %>
-			gMap.fitBounds(lat_lng_bounds);		
+			<% if @feats.length > 1 %>
+				gMap.fitBounds(lat_lng_bounds);	
+			<% end %>	
 		<% else %>
 			var marker = new google.maps.Marker({
 				position: lat_lng,
