--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang "en">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 	  <title>Feats With Friends | Create and compete over records set all over the world.</title>
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -30,7 +31,7 @@
 	  <![endif]-->
 
 	  <!-- Le fav and touch icons -->
-	  <link rel="shortcut icon" href="#""<!--assets/ico/favicon.ico-->>
+	  <link rel="shortcut icon" href="#"><!--assets/ico/favicon.ico-->
 	  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
 	  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
 	  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
