Prevent duplicate feats at same location

--- a/app/views/locations/choose_from_existing.html.erb
+++ b/app/views/locations/choose_from_existing.html.erb
@@ -38,7 +38,7 @@
 						 	options_from_collection_for_select(@locations, :id, :name),
 							multiple: 'true')%>
 						<br>
-           	<%= submit_tag 'Use this location', 
+           	<%= submit_tag 'Use this location', name: nil,
 							class: "btn btn-small btn-primary" %>
          	</fieldset>
         <% end %>
