--- a/app/views/attempts/_attempt_form.html.erb
+++ b/app/views/attempts/_attempt_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @attempt do |f| %>
+<%= form_for @attempt, html: { multipart: true } do |f| %>
 	<% if @attempt.errors.any? %>
 		<%= render 'shared/error_messages', target: @attempt %>
 	<% end %>
@@ -15,12 +15,19 @@
 			<%= text_field_tag "seconds", params[:seconds], maxlength: "4", 
 				class: "field span1"%>
 			<%= f.label "Secs.", style: "display:inline;"%>
-			<br>
-		
 		<% else %>
 			<%= f.label :score %>
 			<%= f.text_field :score, class: "field span1"%>
 		<% end %>
+		<br>
+		<br>
+		<%= f.label :image %>
+		<% unless @attempt.image.blank? %>
+			<%= image_tag @attempt.image_url.to_s %>
+			<br><br>
+		<% end %>			
+		<%= f.file_field :image, accept: "image/*" %>
+		<br>
 		<br>
 		<%= f.submit "Record Attempt", 
         class: "btn btn-small btn-primary" %>		            
