--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -7,7 +7,10 @@
 				<br>
 	      <br>
 				<div class="row">
-					<div class="span4">
+					<div class="span1">
+						<br>
+					</div>
+					<div class="span3">
 						<%= render 'attempt_form' %>
 					</div>
 				</div>				
